--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,141 @@
 /* YOUR STYLES */
-/*eastern red #a10022*/
+/*
+Eastern Red #a10022
+Eastern Grey #6d6e71
+*/
 body {
     font-family: 'Roboto', sans-serif;
 }
-
+.cd-header img{
+    margin-left:30%;
+    width: 40%;
+}
 .cd-header {
     background: #a10022;
+    width: 100%;
+    height: auto;
+    display:inline-block;
 }
+
+/*  TYPOGRAPHY  */
+main section{
+    color:white;
+}
+  .no-touch .cd-tab-filter a:hover {
+    color: #a10022;
+  }
+  .cd-tab-filter a.selected {
+    color: #a10022;
+    /* create border bottom using box-shadow property */
+    box-shadow: inset 0 -2px 0 #a10022;
+}
+.cd-filter::before {
+    background-color: black;
+}
+.cd-filter .cd-close {
+    background-color: black;
+}
+.no-touch .cd-filter .cd-close:hover {
+  background: #a10022;
+}
+.no-touch .cd-tab-filter a:hover {
+    color: #a10022;
+}
+.cd-close:hover {
+    background-color: #6d6e71;
+}
+.cd-filter-block select:focus {
+  border-color: #a10022;
+}
+.cd-filter-block input[type=radio]:checked + label::before,
+.cd-filter-block input[type=checkbox]:checked + label::before {
+  border-color: #a10022;
+  background-color: #a10022;
+}
+.cd-tab-filter ul {
+  box-shadow: inset 0 -2px 0 #a10022;
+}
+.cd-tab-filter.is-open ul {
+  box-shadow: inset 0 -2px 0 #a10022, 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.no-touch .cd-filter-block h4:hover {
+  color: #a10022;
+}
+.cd-filter-block input[type='search']:focus,
+.cd-filter-block input[type='text']:focus,
+.cd-filter-block select:focus {
+  outline: none;
+  background-color: #ffffff;
+  border-color: #a10022;
+}
+.cd-header h1 {
+    color: #ffffff;
+    line-height: 1.5em;
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 600;
+    padding-bottom:25px;
+    letter-spacing: 2px;
+}
+h2{
+    font-size: 1.5em;
+    line-height: 1.25em;
+    font-weight: bolder;
+    letter-spacing: .1em;
+}
+h3{
+    
+}
+h4{
+   line-height: 1.4em; 
+}
+h6{
+    line-height: 1.4em
+}
+p{
+    font-weight: normal;
+    line-height: 1.125em;
+    margin-top:.25em;
+}
+em {
+    font-style: italic;
+    font-size: .8em;
+    
+}
+strong {
+    font-weight: bold;
+}
+.cd-gallery ul {
+    text-align:left;
+}
+/* END TYPOGRAPHY*/
 
 /* Content Containers */
 .cd-gallery li {
-    background: teal;
+    background: ;
     padding: 1em;
 }
 
 /* Grid View */
+#grid {
+    color:grey;
+    text-transform: uppercase;
+    padding: 10px;
+    font-size: .9em;
+}
+#grid:hover {
+    color:black;
+}
+
+#list {
+    text-transform: uppercase;
+    font-size: .9em;
+    padding: 10px;
+    color:grey;
+}
+#list:hover {
+    color:black;
+}
 
 .grid li.mix {
     
@@ -24,4 +145,74 @@ body {
 }
 .list li.mix p {
     display: none;
+}
+
+/* Major(red) Minor(blue) Styling */
+/*
+#f45a5a
+lightblue
+*/
+.major{
+    background: #a10022;
+}
+/*grey #adadad*/
+.elective {
+    background: #6d6e71;
+}
+
+@media screen and (max-width: 1200px) {
+    .cd-header h1 {
+        font-size: 1.5em;
+        line-height: 1.5em;
+    }
+    .cd-header img{
+        margin-left: 22.5%;
+        width: 55%;
+    }
+     .cd-tab-filter a.selected {
+        background-color: #a10022;
+    }
+    /* Grid View */
+    #grid {
+        color: black;
+    }
+
+    #list {
+        color:black;
+    }
+    
+}
+@media screen and (max-width: 766px) {
+    .cd-header h1 {
+        font-size: 1.5em;
+        line-height: 1.5em;
+    }
+    .cd-header img{
+        margin-left:10%;
+        width: 80%;
+    }
+    .cd-tab-filter a.selected {
+    color: white;
+    /* create border bottom using box-shadow property */
+    box-shadow: inset 0 -2px 0 #a10022;
+    }
+    a {
+        color:#a10022;
+    }
+    #grid {
+        color:#a10022;
+    }
+    #list {
+        color:#a10022;
+    }
+}
+@media screen and (max-width: 420px) {
+    .cd-header h1 {
+        font-size: 1em;
+        line-height: 1.4em;
+    }
+    .cd-header img{
+        margin-left:10%;
+        width: 80%;
+    }
 }
